# pastoral-bird-project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: stitch-prompt.md
src/: admin_app.py  bigquery_schema.sql  cloud_function.py  ebird_ingestion.py  generate_content.py  prompts.json
tests/: test_ingestion.py  test_latency.py  test_ollama.py
