[project]
name = "pastoral-bird-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "db-dtypes>=1.5.1",
    "google-cloud-aiplatform>=1.149.0",
    "google-cloud-bigquery>=3.41.0",
    "kanoa>=0.5.0",
    "openai>=2.34.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "streamlit>=1.57.0",
]
